# formparse

./: AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  setup.cfg
.github/workflows/: ci.yaml
docs/: index.rst  quickstart.rst
src/formparse/: formula.py  skeleton.py
tests/: conftest.py  test_formula.py  test_skeleton.py
