# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = formparse
description = Simple library for evaluating mathematical formulas.
author = Nicklas Bocksberger
author_email = nicklas@bocksberger.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/nick28829/formparse
project_urls =
    Documentation = https://formparse.readthedocs.io/en/stable/
    Source = https://github.com/nick28829/formparse
    Tracker = https://github.com/nick28829/formparse/issues
    Download = https://pypi.org/project/formparse/#files
    Changelog = https://github.com/nick28829/formparse/CHANGELOG.rst

platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# python_requires = >=3.8
install_requires =
    importlib-metadata; python_version<"3.8"


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    unittest

[options.entry_points]
# currently no scripts are provided/thought of

[tool:unittest]
# original pytest stuff, but we use unittest, uncomment if needed again
# addopts =
#     --cov formparse --cov-report term-missing
#     --verbose
# norecursedirs =
#     dist
#     build
#     .tox
# testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.3.1
package = formparse
